# yamlguard

./: .gitignore  .yamlguard.yml  ARCHITECTURE.md  LICENSE  README.md  TESTING.md  demo.py  example.yaml  pyproject.toml  run_tests.sh  test_samples.py
samples/: README.md
samples/complex/: large_config.yaml  multi_document_complex.yaml
samples/cosmetics/: boolean_format.yaml  duplicate_keys.yaml  long_lines.yaml  mixed_quotes.yaml  trailing_spaces.yaml
samples/indentation/: bad_indentation.yaml  good.yaml  mixed_tabs_spaces.yaml  sequence_indentation.yaml
samples/kubernetes/: invalid_deployment.yaml  invalid_types.yaml  multi_document.yaml  valid_deployment.yaml
samples/secrets/: api_keys.yaml  aws_credentials.yaml  database_credentials.yaml  github_tokens.yaml  private_keys.yaml
tests/: __init__.py  test_config.py  test_cosmetics.py  test_indent_checker.py
yamlguard/: __init__.py  cli.py  config.py  core.py  cosmetics.py  indent_checker.py  loader.py
yamlguard/kube/: __init__.py  schemas.py  validate.py
yamlguard/reporters/: __init__.py  base.py  jsonl.py  stylish.py
yamlguard/secrets/: __init__.py  detect_secrets.py  gitleaks.py  rules.py
